# kan

./: CMakeLists.txt  LICENSE
ideas/: aos_soa.md  block_func_ideas.md  casing.md  conditions.md  elf.md  enum.md  goto.md  intrinsics.md  loops.md  multiline_lambda.md  number.md  operators.md  option_result.md  pointers.md  print_log.md  safety.md  slice.md  template.md
include/: asm.hpp  binary.hpp  bit.hpp  defer.hpp  error.hpp  file.hpp  fmt.hpp  hash.hpp  hash_map.hpp  lexer.hpp  mem.hpp  num.hpp  parser.hpp  rng.hpp  source.hpp  str.hpp  token.hpp  vector.hpp
src/: asm.cpp  binary.cpp  bit.cpp  file.cpp  lexer.cpp  main.cpp  parser.cpp  rng.cpp  source.cpp  str.cpp
